[package]
name = "uclip"
version = "0.1.0"
edition = "2021"
description = "Redirects output of command line tools to the Windows clipboard. This text output can then be pasted into other programs."
readme = "README.md"
repository = "https://github.com/AquaBindi/uclip"
license = "MIT"
license-file = "LICENSE"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
clipboard-win = "5.3.0"
